contrast fix

--- a/cs/style_stories.css
+++ b/cs/style_stories.css
@@ -11,7 +11,7 @@ a {
 }
 #main-center {
     text-align: center;
-    background: #ffc100;
+    background: #cfb14e;
 }
 .sticky-navbar {
     top:0;
